# cVAE

./: .gitignore  README.md  demo.Rmd  prediction_demo.Rmd
R/: DESCRIPTION  LICENSE  NAMESPACE
R/R/: init.R  prepare_data.R  run_cvae.R
R/tests/: testthat.R
R/tests/testthat/: test-cvae.R
python/: README.md  pyproject.toml
python/cvae_biobart/: __init__.py
python/cvae_biobart/models/: __init__.py  biobart_encoder.py  biobert_encoder.py  cvae.py
python/cvae_biobart/utils/: __init__.py  data_utils.py
python/cvae_biobert/: __init__.py
python/cvae_biobert/models/: __init__.py  biobert_encoder.py  cvae.py
python/cvae_biobert/utils/: __init__.py  data_utils.py
python/tests/: __init__.py  test_cvae.py
